--- a/light.html
+++ b/light.html
@@ -16,6 +16,18 @@ data-162866="background-image:linear-gradient(3600deg, hsl(15, 77%, 86%), hsl(34
 			<div id="day"><div class="circle">
 				circle
 			</div></div>
+
+			<section>
+				<div class="content" style="top:500px;" data-450="transform: rotateY(-90deg);" data-500="transform: rotateY(0deg);opacity:1;" data-1100="opacity:0;">
+					<p>the part one</p>
+				</div>
+				<div class="content fleft" style="top:600px;" data-1300="transform: rotateY(-90deg);" data-1350="transform: rotateY(0deg);opacity:1;" data-1800="opacity:0;">
+					<p>the part two</p>
+				</div>
+				<div class="content fleft" style="top:1000px;" data-2450="transform: rotateY(-90deg);" data-2500="transform: rotateY(0deg);opacity:1;" data-3000="opacity:0;">
+					<p>the part three</p>
+				</div>
+			</section>
 			<!-- <svg id="svgForStroke"  width="400" height="200" xmlns="http://www.w3.org/2000/svg">
 			 <g>
 			 <path d="M20,20 C90,40 130,40 180,20" stroke="#000000" fill="none" style="stroke-width: 2px;"></path>
